<resources>
<string name="app_about">Shadowlands RoadTrip, a handy app to keep track of your vehicles\' mileage, trips, gas, and service.\n\nSource: https://github.com/jdmonin/SLRoadtrip/\n\nCopyright 2010-2017,2019 Jeremy D Monin\nLicense: GPLv3 (http://www.gnu.org/licenses/gpl-3.0.html )\n</string>
<string name="app_name">Shadowlands RoadTrip</string>
<string name="about">About</string>
<string name="active">Active</string>
<string name="added_on">Added on</string>
<string name="all_vehicles">All vehicles</string>
<string name="amount_kB">%1$d kB</string>
<string name="amount_MB">%1$.2f MB</string>
<string name="androidstartup_pleaseCreate">Welcome!\n\nPlease begin by entering your name and vehicle.</string>
<string name="androidstartup_restoreBkup">If you already use Shadowlands RoadTrip, you can restore a backup file to continue:</string>
<string name="androidstartup_verifyCurrD">Please verify the current driver.</string>
<string name="androidstartup_verifyCurrV">Please verify the current vehicle.</string>
<string name="area__colon">Area:</string>
<string name="backups">Backups</string>
<string name="backup_now">Backup Now</string>
<string name="begin__initcap">Begin</string>
<string name="begin_frequent_trip">Begin Frequent Trip</string>
<string name="begin_trip">Begin Trip</string>
<string name="build_number__fmt">Build number: %1s</string>
<string name="calculator">Calculator...</string>
<string name="cancel_trip">Cancel Trip</string>
<string name="category">Category</string>
<string name="change">Change</string>
<string name="change_driver">Change Driver</string>
<string name="change_driver_vehicle">Change Driver / Vehicle</string>
<string name="choose_an_active_vehicle">Choose an active vehicle.</string>
<string name="choose_a_frequent_trip">Choose a frequent trip</string>
<string name="choose_an_inactive_vehicle">Choose an inactive vehicle.</string>
<string name="choose_a_stop">Choose a stop:</string>
<string name="close">Close</string>
<string name="confirm">Confirm</string>
<string name="continue_from_colon">Continue from:</string>
<string name="create">Create</string>
<string name="current_driver">Current driver</string>
<string name="current_driver_veh_not_found">Current driver/vehicle not found in db</string>
<string name="current_odometer">Current\nodometer</string>
<string name="current_total_odometer">Current\ntotal\nodometer</string>
<string name="current_vehicle">Current vehicle</string>
<string name="comment">Comment</string>
<string name="continu">Continue</string>
<string name="continu_at_time">Continue\nat Time</string>
<string name="continu_from_stop">Continue from Stop</string>
<string name="description">Description</string>
<string name="destination">Destination</string>
<string name="destination_within_the_area">Destination\nwithin the area</string>
<string name="distance">Distance</string>
<string name="done">Done</string>
<string name="driver">Driver</string>
<string name="edit_drivers">Edit drivers</string>
<string name="edit_vehicles">Edit vehicles</string>
<string name="end_trip">End Trip</string>
<string name="enter_stop">Enter Stop</string>
<string name="error">Error</string>
<string name="expenses">Expenses</string>
<string name="export">Export</string>
<string name="filename">Filename</string>
<string name="fillup">Fill-up</string>
<string name="frequent_local">Frequent Local</string>
<string name="frequent_roadtrip">Frequent Roadtrip</string>
<string name="from__colon">From:</string>
<string name="gas__colon_sp">Gas: </string>
<string name="gas__dots">Gas...</string>
<string name="go">Go</string>
<string name="historical">Historical</string>
<string name="home_area">Home area</string>
<string name="internal__current_notfound_area_driver_veh_trip">Internal error: Current area/driver/vehicle/trip not found in db</string>
<string name="internal__error_occurred">An internal error occurred: %1s</string>
<string name="internal__missing_required_bundle">Internal error: Missing required bundle when calling activity.</string>
<string name="keep_this">Keep this</string>
<string name="location">Location</string>
<string name="make_this_a_frequent_trip">Make this a Frequent Trip...</string>
<string name="make_this_another_frequent_trip">Make this another Frequent Trip...</string>
<string name="model">Model</string>
<string name="name">Name</string>
<string name="new_area">New area</string>
<string name="new_driver">New driver</string>
<string name="new_vehicle">New vehicle</string>
<string name="no">No</string>
<string name="no_earlier_trips_found">No earlier trips were found.</string>
<string name="no_frequent_trips_found">No frequent trips were found.</string>
<string name="no_frequent_trips_found_from">No frequent trips were found from</string>
<string name="no_later_trips_found">No later trips were found.</string>
<string name="no_trips_found">No trips were found.</string>
<string name="none">none</string>
<string name="none__parens">(none)</string>
<string name="none_found">None found.</string>
<string name="not_found">Not found.</string>
<string name="now">Now</string>
<string name="original_odometer">Original\nodometer</string>
<string name="other__dots">Other…</string>
<string name="other_stop">Other stop...</string>
<string name="other_vehicle">Other vehicle...</string>
<string name="passengers">Passengers</string>
<string name="passengers_hint">(not including driver)</string>
<string name="please_check_the_expense_total">Please check the expense total.</string>
<string name="please_check_the_total_odometer">Please check the total odometer.</string>
<string name="please_check_the_trip_odometer">Please check the trip odometer.</string>
<string name="please_choose_existing_location">Please choose an existing location.</string>
<string name="please_enter_the_description">Please enter the description.</string>
<string name="please_enter_the_filename">Please enter the filename.</string>
<string name="please_enter_the_location">Please enter the location.</string>
<string name="please_enter_the_station">Please enter the station.</string>
<string name="quantity">Quantity</string>
<string name="restore">Restore</string>
<string name="revert">Revert</string>
<string name="road_trip">Road Trip</string>
<string name="road_trip_desti_area">Road Trip\nDestination area:</string>
<string name="save">Save</string>
<string name="save_changes">Save Changes</string>
<string name="sdcard_not_mounted">The SD card is not mounted.</string>
<string name="sdcard_read_only">The SD card is read-only.</string>
<string name="set_time_now_or_historical">Historical Mode:\nShould the time be set to now, or to the previous date %1$s entered for this vehicle?</string>
<string name="settings">Settings</string>
<string name="show_dropdown">Show Dropdown</string>
<string name="show_logbook">Show Logbook</string>
<string name="size">Size</string>
<string name="starting_time">Starting time</string>
<string name="starting_location">Starting location</string>
<string name="starting_odometer">Starting\nodometer</string>
<string name="stop_continue">Stop &amp; Continue</string>
<string name="stop_during_a_trip">Stop during a Trip</string>
<string name="stopped_at_time">Stopped\nat Time</string>
<string name="success">Success</string>
<string name="this_time_must_be_no_earlier_than">This time must be no earlier than the stop time.</string>
<string name="to__colon">To:</string>
<string name="tools">Tools</string>
<string name="total">total</string>
<string name="total_odometer">Total\nodometer</string>
<string name="trip__category">Trip\ncategory</string>
<string name="trip_odometer">Trip\nodometer</string>
<string name="undo">Undo</string>
<string name="using_old_date_due_to_previous">Historical Mode:\nUsing an old date because of the previous date entered for this vehicle.</string>
<string name="validate">Validate</string>
<string name="validation_failed">Validation failed</string>
<string name="value__odo__float">%1$.1f</string>
<string name="value__odo__parens_float">(%1$.1f)</string>
<string name="vehicle">Vehicle</string>
<string name="via">via</string>
<string name="via_route">Via route</string>
<string name="via_routes_changed">Via Routes Changed</string>
<string name="view">View</string>
<string name="view_drivers">View Drivers</string>
<string name="view_drivers_chg_vehicle">View Drivers / Change Vehicle</string>
<string name="view_vehicles">View Vehicles</string>
<string name="vin">VIN</string>
<string name="year">Year</string>
<string name="android_startup_starting">Starting up...</string>
<string name="logbook_recent_gas_nonefound">No recent Gas Stops found for this vehicle.</string>
<string name="logbook_recent_gas_text">Recent Gas Stops for Vehicle</string>
<string name="logbook_show__title">View Logbook</string>
<string name="logbook_show__earlier_trips">^ Earlier Trips ^</string>
<string name="logbook_show__export_complete">Export complete.</string>
<string name="logbook_show__later_trips">v  Later Trips  v</string>
<string name="logbook_show__menu_location">Location</string>
<string name="logbook_show__no_locs_in_area">No locations are entered in the current GeoArea.</string>
<string name="logbook_show__other_vehicle">Other Vehicle</string>
<string name="logbook_show__recent_gas">Recent Gas</string>
<string name="logbook_show__go_to_date">Go to Date</string>
<string name="logbook_show__enter_location_to_search_trips">Search for trips from or to this location:</string>
<string name="logbook_show__search_via_routes">Search Via Routes</string>
<string name="logbook_show__search_via_routes__desc">Search for Via Routes entered between locations:</string>
<string name="logbook_show__search_via_routes__from_to__newline">From %1$s to %2$s:\n</string>
<string name="logbook_show__search_via_routes__loc_A">Location A:</string>
<string name="logbook_show__search_via_routes__loc_B">Location B:</string>
<string name="logbook_show__search_via_routes__via">Via %1$s</string>
<string name="logbook_show__search_via_routes__via_after_mileage">%1$.1f %2$s via %3$s</string>
<string name="logbook_show__validating_db">Validating DB</string>
<string name="logbook_show__validation_backup_ago_ask">Validation complete, no problems found.\nLast backup was %1$d days ago, go to Backup screen now?</string>
<string name="logbook_show__validation_failed">Validation failed</string>
<string name="logbook_show__validation_no_problems">Validation complete, no problems found.</string>
<string name="logbook_show_popup_export_filename">CSV Filename:</string>
<string name="logbook_show_popup_trip_detail__desti_area">Destination\narea</string>
<string name="logbook_show_popup_trip_detail__starting_area">Starting area</string>
<string name="logbook_show_popup_trip_detail__trip_stops">Trip Stops: \u00A0 (tap for stop details)</string>
<string name="logbook_show_popup_trip_detail__trip_stops_none">Trip Stops: None</string>
<string name="main_cancel_are_you_sure">Are you sure you want to cancel the current trip?</string>
<string name="trip_createfreq_usually_about_time">Usually about this time of day:</string>
<string name="trip_createfreq_usually_weekdays">Usually on weekdays</string>
<string name="trip_createfreq_usually_weekends">Usually on weekends</string>
<string name="trip_createfreq_tstops_to_include">Trip stops to include:</string>
<string name="trip_tstop_gas_atprice"> \@ Price</string>
<string name="trip_tstop_gas_brand_grade">Brand/\nGrade</string>
<string name="trip_tstop_gas_equalscost"> = Cost</string>
<string name="trip_tstop_gas_perunit">/ unit</string>
<string name="trip_tstop_gas_prompt">Enter the gas stop details.</string>
<string name="vehicle_entry_hint_nickname">Optional nickname or color</string>
<string name="vehicle_entry_hint_year">Model year</string>
<string name="vehicle_entry_prompt">Enter information about this vehicle.</string>
<string name="vehicle_make">Make (Brand)</string>
</resources>