<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of Shadowlands RoadTrip - A vehicle logbook for Android.

 This file Copyright (C) 2011-2012 Jeremy D Monin (jdmonin@nand.net)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see http://www.gnu.org/licenses/ .

 Menu for LogbookShow activity
 -->
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
<item android:id="@+id/menu_logbook_recent_gas"
	android:title="@string/logbook_show__recent_gas"
	android:icon="@android:R/drawable/ic_menu_recent_history"
	/>
<item android:id="@+id/menu_logbook_filter_location"
	android:title="@string/logbook_show__menu_location"
	android:icon="@android:R/drawable/ic_menu_search"
	/>
<item android:id="@+id/menu_logbook_go_to_date"
	android:title="@string/logbook_show__go_to_date"
	android:icon="@android:R/drawable/ic_menu_month"
	/>
<item android:id="@+id/menu_logbook_other_veh"
	android:title="@string/logbook_show__other_vehicle"
	android:icon="@android:R/drawable/ic_menu_set_as"
	/>
<item android:id="@+id/menu_logbook_settings"
	android:title="@string/settings"
	android:icon="@android:R/drawable/ic_menu_preferences"
	/>
<item
	android:title="@string/tools"
	android:icon="@android:R/drawable/ic_menu_manage"
	>
	<menu>
	<item android:id="@+id/menu_logbook_validate"
		android:title="@string/validate"
		/>
	<item android:id="@+id/menu_logbook_validate_full"
		android:title="@string/validate_all"
		/>
	</menu>
</item>
</menu>
