<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of Shadowlands RoadTrip - A vehicle logbook for Android.

 Copyright (C) 2010-2011 Jeremy D Monin (jdmonin@nand.net)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see http://www.gnu.org/licenses/ .
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:id="@+id/main_text"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/main_text"
    />
<TextView
    android:id="@+id/main_text_current"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_marginBottom="6dp"
    />
<!-- 6dp margin between text_current and buttons -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/main_gridview"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
	>
	<TableRow>
		<Button android:id="@+id/main_btn_local_trip"
		        android:text="@string/local_trip"
		        android:onClick="onClick_BtnLocalTrip"/>
		<Button android:id="@+id/main_btn_freq_local"
		        android:text="@string/frequent_local"
		        android:onClick="onClick_BtnFreqLocal"/>
	</TableRow>
	<TableRow>
		<Button android:id="@+id/main_btn_road_trip"
		        android:text="@string/road_trip"
		        android:onClick="onClick_BtnRoadTrip"/>
		<Button android:id="@+id/main_btn_freq_roadtrip"
		        android:text="@string/frequent_roadtrip"
		        android:onClick="onClick_BtnFreqRoadtrip"/>
	</TableRow>
	<TableRow>
		<Button android:id="@+id/main_btn_change_driver_vehicle"
		        android:text="@string/change_driver_vehicle"
		        android:onClick="onClick_BtnChangeDriverVehicle"
		        android:layout_span="2" />
	</TableRow>
	<TableRow>
		<Button android:id="@+id/main_btn_end_trip"
		        android:text="@string/end_trip"
		        android:onClick="onClick_BtnEndTrip"/>
		<Button android:id="@+id/main_btn_stop_continue"
		        android:text="@string/stop_continue"
		        android:onClick="onClick_BtnStopContinue"/>
	</TableRow>
	<TableRow>  <!-- spacer -->
		<TextView
		    android:layout_width="fill_parent" 
    		android:layout_height="wrap_content" 
		> \n </TextView>
	</TableRow>
	<TableRow>
		<Button android:id="@+id/main_btn_show_logbook"
		        android:text="@string/show_logbook"
		        android:onClick="onClick_BtnShowLogbook"/>
	</TableRow>
</TableLayout>
</LinearLayout>
