<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of Shadowlands RoadTrip - A vehicle logbook for Android.

 Copyright (C) 2010-2011 Jeremy D Monin (jdmonin@nand.net)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see http://www.gnu.org/licenses/ .
 -->
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
<item android:id="@+id/menu_main_backup"
	android:title="@string/backups"
	android:icon="@android:R/drawable/ic_menu_save"
	/>
<item android:id="@+id/menu_main_canceltrip"
	android:title="@string/cancel_trip"
	android:icon="@android:R/drawable/ic_menu_close_clear_cancel"
	/>
<item android:id="@+id/menu_main_about"
	android:title="@string/about"
	android:icon="@android:R/drawable/ic_menu_info_details"
	/>
</menu>
