<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of Shadowlands RoadTrip - A vehicle logbook for Android.

 Copyright (C) 2010-2012 Jeremy D Monin (jdmonin@nand.net)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see http://www.gnu.org/licenses/ .
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/trip_tstop_gas_prompt"
    />
<TableLayout android:layout_height="wrap_content" android:layout_width="fill_parent">
    <TableRow>
		<TextView
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/quantity"
		    />
		<EditText android:id="@+id/trip_tstopgas_quant"
			android:inputType="numberDecimal"
		    android:layout_weight="1"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:layout_span="2"
		    />
    </TableRow>
    <TableRow>
		<TextView
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/trip_tstop_gas_atprice"
		    />
		<EditText android:id="@+id/trip_tstopgas_perunit"
			android:inputType="numberDecimal"
		    android:layout_weight="1"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    />
		<TextView
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/trip_tstop_gas_perunit"
		    />
    </TableRow>
    <TableRow>
		<TextView
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/trip_tstop_gas_equalscost"
		    />
		<EditText android:id="@+id/trip_tstopgas_total"
			android:inputType="numberDecimal"
		    android:layout_weight="1"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    />
		<TextView
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/total"
		    />
    </TableRow>
    <TableRow>
        <CheckBox android:id="@+id/trip_tstopgas_fillup_chk"
	        android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" />
		<TextView
		    android:layout_width="fill_parent" 
		    android:layout_height="fill_parent"
		    android:gravity="center_vertical"
		    android:text="@string/fillup"
		    android:layout_span="2"
		    />
    </TableRow>
    <TableRow>
		<TextView  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/trip_tstop_gas_brand_grade"
		    />
		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_span="2"
		    android:layout_weight="1"
		    >
			<AutoCompleteTextView
			    android:id="@+id/trip_tstopgas_brandgrade"
			    android:completionThreshold="1"
			    android:inputType="text"
			    android:layout_weight="1"
			    android:layout_margin="0px"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<ImageButton
				android:src="@android:drawable/arrow_down_float"
			    android:layout_width="24px"
			    android:layout_height="24px"
			    android:layout_gravity="center_vertical"
			    android:padding="1px"
			    android:layout_margin="0px"
			    android:onClick="onClick_BtnBrandGradeDropdown"
				/>
		</LinearLayout>
    </TableRow>
</TableLayout>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
	<Button android:id="@+id/trip_tstopgas_btn_enter"
	    android:text="@android:R/string/ok"
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:onClick="onClick_BtnOK" />
	<Button android:id="@+id/trip_tstopgas_btn_cancel"
	    android:text="@android:R/string/cancel"
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:onClick="onClick_BtnCancel" />
</LinearLayout>
</LinearLayout>
</ScrollView>